# data-engineering

./: .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .sqlfluff  .sqlfluffignore  LICENSE.md  README.md  example.env  facdb_qa.ipynb  pyproject.toml  tach.toml  ztl.ipynb
data-library/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  library.sh  pyproject.toml
data-library/.devcontainer/: Dockerfile  devcontainer.json
data-library/.github/workflows/: codeql-analysis.yml  open-data.yml  quaterly-updates.yml  single-runner.yml  test.yml  update_image.yml
data-library/data_flow_diagrams/: data_flow_diagrams.py
data-library/docs/: index.html
data-library/examples/: config_example.yml
data-library/tests/: __init__.py  test_archive.py  test_config.py  test_ingest.py  test_ingest_script.py  test_s3.py  test_utils.py  test_validator.py
data-library/tests/data/: socrata.yml  test_none.yml  test_nypl_libraries.yml  url.yml
db-cpdb/: .gitignore  README.md  cpdb.sh  pyproject.toml  version.env
db-cpdb/.github/ISSUE_TEMPLATE/: update.md
db-cpdb/.github/workflows/: main.yml  spending.yml
db-cpdb/analysis/: agency_validated_geoms_summary_table.sql  geospatial_check.sql  projects_by_communitydist.sql  projects_by_communitydist_spending.sql  projects_by_communitydist_spending_date.sql
db-cpdb/bash/: 01_dataloading.sh  02_build_attribute.sh  03_adminbounds.sh  04_analysis.sh  05_export.sh  06_spending.sh  11_spending.sh  config.sh
db-cpdb/data/: agencylookup.csv  dcp_cpdb_agencyverified.csv  edcgeoms_2021-01-08.csv  id_bin_map.csv  rules.csv
db-cpdb/python/: attributes_geom_agencyverified_geocode.py  attributes_maprojid_parkid.py  dot_bridges.py  projects_spending_byyear.py
db-cpdb/sql/: attributes_agencyverified.sql  attributes_combined.sql  attributes_ddc.sql  attributes_dot.sql  attributes_dpr_fmsid.sql  attributes_dpr_string_name.sql  attributes_edc.sql  attributes_facilities.sql  attributes_maprojid_after.sql  attributes_maprojid_bbl.sql  attributes_maprojid_cd.sql  attributes_maprojid_censustracts.sql  attributes_maprojid_firecompanies.sql  attributes_maprojid_policeprecincts.sql  attributes_maprojid_statesenatedistricts.sql  attributes_maprojid_trafficanalysiszones.sql  attributes_spending_date.sql  budget_fisa.sql  commitments.sql  cpdb_build_master.sql  opendata.sql  projects.sql  projects_fisa.sql
db-cpdb/sql/analysis/: agency_validated_geoms_summary_table.sql  geospatial_check.sql  projects_dollars_mapped_categorized_managing.sql
db-cpdb/templates/: cpdb_capital_spending.yml
db-facilities/: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  facdb.sh  pyproject 2.toml  pyproject.toml  version.env
db-facilities/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
db-facilities/.github/ISSUE_TEMPLATE/: data-loading.md
db-facilities/.github/workflows/: main.yml
db-facilities/dashboard/: app.py  requirements.txt
db-facilities/dashboard/.devcontainer/: Dockerfile  devcontainer.json
db-facilities/docs/: index.html
db-facilities/facdb/: __init__.py  cli.py  datasets.yml  pipelines.py
db-facilities/facdb/bash/: config.sh  dataloading.sh  export.sh
db-facilities/facdb/data/: lookup_classification.csv  manual_corrections.csv
db-facilities/facdb/geocode/: function1B.py  functionBL.py  functionBN.py
db-facilities/facdb/sql/: _create_facdb_address.sql  _create_facdb_base.sql  _create_facdb_boro.sql  _create_facdb_geom.sql  _create_reference_tables.sql  _qaqc.sql  bpl_libraries.sql  dca_operatingbusinesses.sql  dcp_colp.sql  doe_busroutesgarages.sql  doe_lcgms.sql  doe_universalprek.sql  dohmh_daycare.sql  dot_bridgehouses.sql  dpr_parksproperties.sql  dsny_donatenycdirectory.sql  dsny_electronicsdrop.sql  dsny_fooddrop.sql  dsny_garages.sql  dsny_specialwastedrop.sql  foodbankny_foodbanks.sql  hra_medicaid.sql  nycha_policeservice.sql  nysdec_lands.sql  nysdec_solidwaste.sql  nysopwdd_providers.sql  nysparks_historicplaces.sql  nysparks_parks.sql  qpl_libraries.sql  usdot_ports.sql  usnps_parks.sql
dcpy/: __init__.py  __main__.py  cli.py  configuration.py  git.py  pyproject.toml  utils.py
dcpy/builds/: __init__.py  clean_artifacts.py  environment.py  load.py  metadata.py  plan.py
dcpy/connectors/: __init__.py  _cli.py  bytes.py  chain.py  data_library.py  drive.py  filesystem.py  ftp.py  github.py  hybrid_pathed_storage.py  ingest_datastore.py  overture.py  postgres.py  psql.py  registry.py  s3.py  sftp.py  uscourts.py  web.py
dcpy/connectors/edm/: __init__.py  (+15 more)
dcpy/data/: compare.py  models.py
dcpy/dcpy/: configuration.py
dcpy/distribute/: socrata.py
dcpy/extract/: __init__.py  config.py  ingest.py  metadata.py  models.py  run.py  utils.py
dcpy/geosupport/: pluto.py
dcpy/git/: git.py  github.py
dcpy/lifecycle/: __init__.py  _cli.py  _connectors_cli.py  asset_models.py  config.py  connector_registry.py  data_loader.py  models.py  ops.py  product_metadata.py
dcpy/metadata/: models.py  validate.py
dcpy/migrations/: 20240101000000_create_source_data__metadata_logging.sql  2024091019_product_data__event_logging.sql  Readme.md  create_event_logging.sql  create_latest_version_status.sql  create_product_version_lifecycle.sql
dcpy/models/: base.py  data.py  dataset.py  file.py  geocode.py  library.py  product_metadata.py  validate.py
dcpy/product_metadata/: README.md  generate.py  keys.py  versions.py
dcpy/qa/: qa.py
dcpy/test/: conftest.py  test_configuration.py
dcpy/test_integration/: README.md  conftest.py  test_github.py  test_sftp.py
dcpy/utils/: _cli.py  codegen.py  collections.py  data.py  dataframe.py  duckdb.py  excel.py  file.py  formats.py  geocode.py  geospatial.py  git.py  introspect.py  json.py  logging.py  metadata.py  postgres.py  s3.py  schema.py  sftp.py  stats.py  string.py  validate.py  validation.py  versions.py
products/gru-qaqc/: README.md  checks.yml  gru.sh  pyproject.toml
products/zap-opendata/: .gitignore  .pre-commit-config.yaml  README.md  dbt_project.yml  packages.yml  pyproject.toml  requirements.txt  zap.sh
(+4914 files in other folders)
