[tool.sqlfluff.core]
dialect = "postgres"
templater = "placeholder"

# Comma separated list of rules to exclude, or None
exclude_rules = [
    "ambiguous.column_count",
    "references.qualification",
    "structure.unused_cte",
    "references.keywords",
    "references.consistent",
    "references.special_chars",
]

# The standard max_line_length is 80 in line with the convention of
# other tools and several style guides. Many projects however prefer
# something a little longer.
# Set to zero or negative to disable checks.
max_line_length = 120

# CPU processes to use while linting.
# The default is "single threaded" to allow easy debugging, but this
# is often undesirable at scale.
# If positive, just implies number of processes.
# If negative or zero, implies number_of_cpus - specified_number.
# e.g. -1 means use all processors but one. 0 means all cpus.
processes = -1

[tool.sqlfluff.templater.placeholder]
param_style = "colon_optional_quotes"
TABLE = "dummy_table_name"
VERSION = "2023-01-01"
VERSION_PREV = "2022-01-01"
CONDO = "true"
MAPPED = "true"
CONDITION = "WHERE a.geom IS NOT NULL"
GEOM = "geom_2263"

[tool.sqlfluff.rules.layout.long_lines]
ignore_comment_lines = true
ignore_comment_clauses = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "upper"

[tool.pydocstyle]
ignore = ["D100", "D101", "D102", "D107", "D104", "D213", "D407", "D413"]

[tool.black]

[[tool.mypy.overrides]]
module = "geopandas.*,cerberus.*,osgeo.*" # no stubs available
ignore_missing_imports = true

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dcpy"
version = "0.0.1"
description = "DCP Data Engineering's internal python package"
requires-python = ">=3.11"
dependencies = [
    "boto3",
    "botocore",
    "geopandas",
    "pandas",
    "psycopg2_binary",
    "pydantic",
    "python-dotenv",
    "python_dateutil",
    "pytz",
    "PyYAML",
    "rich",
    "setuptools",
    "SQLAlchemy",
    "typer"
]

[tool.setuptools.packages.find]
include = ["dcpy*"]
exclude = ["dcpy.test*"]
