[project]
name = "library"
version = "0.1.0"
description = "DCP Data Engineering's tool for archiving source data"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "diagrams",
    "GDAL",
    "graphviz",
    "Jinja2",
    "lxml",
    "openpyxl",
    "pandas",
    "pydantic",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "requests",
    "rich",
    "typer",
    "urllib3",
    "usaddress",
    "xlrd",
    "pyarrow",
]

[project.scripts]
library = "library.cli:run"

[tool.setuptools.packages.find]
include = ["library*"]

[tool.setuptools.package-data]
library = ["templates/*.yml"]
