[tool.poetry]
name = "db-cpdb"
version = "0.1.0"
description = ""
authors = ["Sasha Weinstein <70385853+SashaWeinstein@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
Jinja2 = "^3.1.2"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
