[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dcpy"
version = "0.0.1"
description = "DCP Data Engineering's internal python package"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "faker",
    "geopandas",
    "Jinja2",
    "lxml",
    "openpyxl",
    "pandas",
    "psycopg2-binary",
    "pyarrow",
    "pydantic",
    "python-dotenv",
    "pytz",
    "PyYAML",
    "rich",
    "sqlalchemy",
    "typer",
    "urllib3",
    "usaddress",
    "xlrd",
]

[tool.setuptools.packages.find]
include = ["dcpy*"]
exclude = ["tests*"]
namespaces = false  # true by default

[project.scripts]
library = "dcpy.library.cli:run"

[tool.setuptools.package-data]
dcpy = [
    "library/templates/*.yml",
    "lifecycle/package/resources/*",
]
