[tool.poetry]
name = "gru-qaqc"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "3.11.*"
pandas = "^1.4.2"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
python-geosupport = "^1.0.8"
usaddress = "^0.5.10"
python-dotenv = "^0.20.0"
csv2md = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
